<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textSize="14dp"
            android:text="@string/title_privacy"
            android:textColor="#555555"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"/>
        <TextView
            android:textSize="13dp"
            android:textColor="#555555"
            android:text="@string/content_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/cb_apply_cri"
            android:textColor="#555555"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_privacy"/>
        <TextView
            android:id="@+id/tv_user_pri"
            android:text="@string/user_privacy"
            android:textSize="14dp"
            android:textColor="#2196F3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_game_pri"
            android:text="@string/game_privacy"
            android:textColor="#2196F3"
            android:textSize="14dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_weight="1"
                android:textSize="14dp"
                android:id="@+id/btn_exit"
                android:text="退出游戏"
                android:layout_width="0dp"
                android:layout_height="40dp"/>
            <Button
                android:layout_weight="1"
                android:textSize="14dp"
                android:id="@+id/btn_start"
                android:text="@string/start_game"
                android:layout_width="0dp"
                android:layout_height="40dp"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>